Fixed alignment of header links in desktop and mobile

--- a/app.css
+++ b/app.css
@@ -110,7 +110,14 @@ white-space: nowrap;
     
 }
 
+.alignmentOfHeaderLinks{
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    }
 
 
 
@@ -518,4 +525,14 @@ padding:0%;
     color: white;
     
     }
+    .alignmentOfHeaderLinks{
+
+        margin-left: 10px;
+        display: auto;
+        justify-content: auto;
+        align-items: auto;
+        width: auto;
+        height: auto;
+        }
+        
 }
